# tomd

./: .env.example  README.md  example.docx  example.html  inspect_openai.py  pyproject.toml  rule.yml  test.py
docs/: how_to_use.md
src/tomd/: __init__.py  llm_enhancer.py
src/tomd/converters/: __init__.py  docx_converter.py  html_converter.py  pdf_converter.py  text_converter.py  url_converter.py
tests/: __init__.py  test_llm_enhancement.py  test_pdf_docx.py  test_tomd.py  test_url.py
