[project]
name = "tomd"
version = "0.1.0"
description = "Convert various file formats to Markdown"
readme = "README.md"
authors = [
    { name = "dizs", email = "dizs@using.ai" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
    "pypandoc>=1.13",
    "pypdf>=5.1.0",
    "python-docx>=1.1.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
